# LangGraph-MCP-Nutrition-Analyzer

./: .env.example  README.md  pyproject.toml  requirements.txt
backend/: requirements.txt  server.py
frontend/: app.py  client.py  requirements.txt
