[project]
name = "mcp-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "fastmcp>=2.12.3",
    "google-genai>=1.38.0",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.7",
    "nest-asyncio>=1.6.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]
